--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Application
 NODE_ENV=development
 PORT=5000
+WS_PORT=5001
 APP_NAME=dsr-api
 APP_PUBLIC_URL=http://localhost:3000
 LOG_LEVEL=info
