--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "node --watch apps/api/src/app/server.js",
     "start": "node apps/api/src/app/server.js",
-    "worker:email": "node apps/workers/email.worker.js"
+    "worker:email": "node apps/workers/email.worker.js",
+    "ws": "node apps/ws/server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -25,6 +26,7 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.3",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   }
