--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ SMTP_SECURE=false
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-smtp-password
 SMTP_FROM="DSR <your-email@example.com>"
+
+# Stripe (billing)
+STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
