--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.3",
+    "stripe": "^20.3.1",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   }
