--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ws": "node apps/ws/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.0",
     "cookie-parser": "^1.4.7",
