--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.0",
     "cookie-parser": "^1.4.7",
@@ -29,8 +30,10 @@
     "mongoose": "^8.10.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "qrcode": "^1.5.3",
     "redis": "^4.7.0",
     "socket.io": "^4.8.3",
+    "speakeasy": "^2.0.0",
     "stripe": "^20.3.1",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
